--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1574,107 +1574,107 @@ stories:
   domain: http://www.vpa.net/
   link: https://www.vpa.net/virginia-press-foundation-focuses-on-future-of-journalism/
 images:
-- name: border-fence-border-fence-on-hill-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-ww2-color.jpg
-- name: crow-crow-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-asteroids.jpg
-- name: store-on-corner-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-aqua.jpg
-- name: border-fence-border-fence-on-hill-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-neo-instinct.jpg
-- name: bf-skinner-fat-old-pigeon-on-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-fat-old-pigeon-on-fence.jpg
-- name: nazi-invasion-statue-capital-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-capital-cannon.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
-- name: mosaic-face-mosaic-face-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-jap-wav-pr.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-- name: sand-hand-sand-hand-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-yellow-paper.jpg
-- name: oldcabin-oldcabin-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-umberto-bocc.jpg
-- name: white-house-lawn-white-house-lawn-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-post-modern.jpg
-- name: oldcabin-store-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crafty-painting.jpg
-- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
-- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-- name: birdhouse-birdhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
-- name: oldhouse-granaryfield-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-alien-goggles.jpg
-- name: mediterranean-mediterranean-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-kand-two.jpg
-- name: nazi-invasion-google-front-of-business.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-google-front-of-business.jpg
-- name: catacombs-catacombs-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-bright-sand.jpg
-- name: nazi-invasion-statue-liberty-clouds-front-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-liberty-clouds-front-far.jpg
-- name: birdhouse-birdhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colored-circuits.jpg
-- name: adam-smith-adam-smith-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-nazi-poster.jpg
-- name: abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
-- name: blossombar-cinnamon-rolls-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-cinnamon-rolls-file-00-00-50-62.jpg
-- name: old-house-oldhouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
+- name: death-valley-death-valley-national-park-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-atari-missle.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smooth-ride.jpg
+- name: yosemite-yosemite-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
+- name: oldbarn-oldbarn-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-asteroids.jpg
+- name: gypsy-wagon-gypsywagon-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-smoking-cigarette.jpg
+- name: stalin-time-statue-liberty-clouds-front-far.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-liberty-clouds-front-far.jpg
+- name: capital-battle-capitolbattle-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-emily-carr.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-atari-asteroids.jpg
+- name: gears-4882162452-fa3126b38d-b.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
+- name: power-lines-power-lines-empty-space-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-jap-dys-1.jpg
+- name: hollywood-building-hollywood-building-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kandinsky-bv.jpg
+- name: treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still-1200.jpg
+- name: bluelake-dry-skin-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-00-00-00.jpg
+- name: docks-docks-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-light-dali.jpg
+- name: art-magnus-zeller-orator.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-magnus-zeller-orator.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+- name: bf-skinner-statue-capital-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-capital-cannon.jpg
+- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-sand-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-sand-paper.png
+- name: statue-of-liberty-front-view-statueofliberty-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-monet-one.jpg
+- name: old-door-lock-old-door-lock-2-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-marcel-duchamp.jpg
+- name: store-on-corner-oldcabin-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dry-skin.jpg
+- name: oldhotel-oldhotel-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crafty-painting.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-1200.jpg
+- name: rain-princess-DSC_0017.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0017.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+- name: catacombs-catacombs-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-dresden.jpg
+- name: braceros-domingo-ulloa-steam-engine-iceland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-steam-engine-iceland.jpg
+- name: cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-pablo-blue.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: amusement-park-amusement-park-2-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-wav-pr.jpg
+- name: docks-docks-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gan-vogh.jpg
+- name: power-lines-power-lines-empty-space-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-umberto-bocc.jpg
+- name: udnie-IMG_6984.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6984.jpg
+- name: subway-subway-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-granite.jpg
+- name: curtain-curtain-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
+- name: copper-circuit-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-ship-waterfront-harbor.jpg
+- name: oldcabin-store-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-bright-sand.jpg
+- name: wind-mills-windmills-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crunch-paper.jpg
+- name: oldcabin-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-blue-circuit.jpg
+- name: nazi-invasion-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-electric-tower-sun-behind.jpg
 - name: beach-clouds-lifeguard-beachclouds-yellow-collage.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-collage.jpg
-- name: legal-statue-legalstatue-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-light-dali.jpg
-- name: fence-mexico-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-rainbow-festival.jpg
-- name: castle-wall-DSC-0067-graham-sutherland.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-graham-sutherland.JPG
-- name: wind-mills-windmills-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
-- name: sand-hand-sand-hand-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-ww2-color.jpg
-- name: birdhouse-birdhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kand-two.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-pablo-blue.jpg
-- name: nazi-invasion-DSC_0017.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0017.jpg
-- name: sand-hand-sand-hand-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gred-mash.jpg
-- name: nyc-flag-api-conversations-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alberto-giacometti.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-far-away.jpg
-- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
-- name: downtheline-downtheline-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-clean-view.jpg
-- name: copper-circuit-san-francisco-from-salesforce-west.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-from-salesforce-west.jpg
-- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
-- name: server-cloud-server-racks-clouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-brush.jpg
-- name: old-granary-field-granaryfield-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-far-away.jpg
-- name: nyc-flag-nycflag-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-pond.jpg
-- name: bf-skinner-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-steam-engine-iceland.jpg
-- name: machine-road-machine-road-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-electricity.jpg
-- name: gears-4882162452-fa3126b38d-b-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-post-modern.jpg
-- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
-- name: power-lines-power-lines-empty-space-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-ww2-color.jpg
-- name: capital-battle-capitolbattle-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-missle.jpg
+- name: old-granary-field-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-deep-connections.jpg
+- name: docks-docks-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sand-paper.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit.jpg
+- name: oldhotel-oldhotel-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-soul.jpg
+- name: stories-new-31-156-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-31-156-800-500-0-max-0--1--1.jpg
+- name: copper-circuit-DSC_0062.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0062.jpg
+- name: old-door-lock-old-door-lock-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-light-dali.jpg
 ---
 Fallin Home Shown In Country Living Magazine.&nbsp;Firearms Instructor Took Out Gunman At Texas Church Service.&nbsp;Heterosexual Couples Form 1st Civil Partnerships In England.&nbsp;Sundance, Impeachment Trial Could Overlap, But Will Trump Haters March Again?.&nbsp;Why 'truth Decay' Is Getting Worse.&nbsp;Hospice Of Gladwin Area Welcomes New Board Member.&nbsp;Fun Holiday Events At Sugarbush Resort.&nbsp;Bill Barr Thinks America Is Going To Hell.&nbsp;
